--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ jar {
     manifest {
         attributes 'Main-Class': mainClassName
     }
-	baseName = 'apriori'
+	baseName = 'simplex'
 }
 
 sourceCompatibility = 1.8
